--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2,6 +2,12 @@
 * {
     box-sizing: border-box;
 }
+
+body {
+margin: 0;
+padding: 0;
+font-family: fantasy;
+}
 /* Global Style End */
 
 /* Header/Navigation Style */
@@ -14,3 +20,23 @@ header {
    align-items: center;
    background-color: #D6B0A7;
 }
+
+header h1 {
+    margin: 0;
+    font-size: 3vw;
+}
+
+header a:hover {
+    text-shadow: none;
+    color: #bdc2e8;
+  }
+
+nav {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  nav a {
+      
+  }
