--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -7,6 +7,7 @@ body {
 margin: 0;
 padding: 0;
 font-family: fantasy;
+background-color: #D6B0A7;
 }
 /* Global Style End */
 
@@ -49,3 +50,20 @@ nav a {
     font-size: 1.55vw;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 } 
+/* Header/Nav Style End */
+
+main {
+    margin-top: 20px;
+    margin-bottom: 45px;
+}
+
+/* Hero Style */
+.hero {
+    background-image: url("../images/magic-bkg.jpg");
+}
+
+.hero img {
+    width: 150px;
+    margin: 20px;
+    border-radius: 20%;
+}
