--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -9,6 +9,11 @@ padding: 0;
 font-family: fantasy;
 background-color: #D6B0A7;
 }
+
+main {
+    margin-top: 20px;
+    margin-bottom: 45px;
+}
 /* Global Style End */
 
 /* Header/Navigation Style */
@@ -52,11 +57,6 @@ nav a {
 } 
 /* Header/Nav Style End */
 
-main {
-    margin-top: 20px;
-    margin-bottom: 45px;
-}
-
 /* Hero Style */
 .hero {
     background-image: url("../images/magic-bkg.jpg");
@@ -73,5 +73,18 @@ main {
 .hero img {
     width: 150px;
     margin: 20px;
-    border-radius: 20%;
+    border-radius: 50%;
+    padding-bottom: 35px;
+}
+
+.hero div {
+    flex: 0 0 100%;
+}
+
+.hero h2 {
+    margin: 0;
+    padding: 20px;
+    font-size: 3rem;
+    line-height: 1.55vw;
+    display: inline;
 }
