--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -88,3 +88,26 @@ nav a {
     line-height: 1.55vw;
     display: inline;
 }
+
+/* Content Style */
+.content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap 
+}
+
+/* Contact Style */
+body {
+  font-family: 'Lato', sans-serif;
+  background: #bdc2e8;
+  color: white;
+}
+
+form header {
+  position: relative;
+  margin: 100px 0 25px 0;
+  font-size: 2.3em;
+  text-align: center;
+  letter-spacing: 7px;
+  flex-wrap: wrap;
+}
