--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -10,6 +10,10 @@ font-family: fantasy;
 background-color: #D6B0A7;
 }
 
+h1, h2 {
+    color: white;
+}
+
 main {
     margin-top: 20px;
     margin-bottom: 45px;
@@ -199,10 +203,12 @@ textarea:hover {
 
   /* Footer Style */
 .footer {
-    background-color: #bdc2e8;
+    background-color: #D6B0A7;
     bottom: 0; 
     width: 100%; 
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
     justify-content: center;
 }
     
@@ -211,5 +217,10 @@ textarea:hover {
     color: white;
     padding: 40px;
     text-decoration: none;
+}
+
+.footer a:hover {
+    text-shadow: none;
+    color: #bdc2e8;
 }
 /* Footer Style End */
