--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -4,10 +4,15 @@
 }
 
 body {
-margin: 0;
-padding: 0;
-font-family: fantasy;
-background-color: #D6B0A7;
+    margin: 0;
+    padding: 0;
+    font-family: fantasy;
+    background-color: #D6B0A7;
+    color: white;
+}
+
+h1, h2 {
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 main {
@@ -53,7 +58,6 @@ nav a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 } 
 /* Header/Nav Style End */
 
@@ -154,7 +158,6 @@ nav a {
     color: white;
     background: #ac9deb;
     list-style: none;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .li-skills:hover {
@@ -282,10 +285,11 @@ textarea:hover {
 }
 /* Footer Style End */
 
+
+
 /* MEDIA QUERIES*/
 
 /* Max Width 980px*/
-
 @media screen and (max-width: 980px) {
 header {
     padding: 0 0 10px 0;
