--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,13 +1,22 @@
 /* Global Styles */
+:root {
+    --primary: rgb(188, 166, 216);
+    --secondary: #bdc2e8;
+    --tertiary: rgb(240,121,82)
+    --dark: rgba(28, 29, 33, 1);
+    --light: #D6B0A7;
+}
 * {
     box-sizing: border-box;
+    margin: 0;
 }
 
 body {
     margin: 0;
     padding: 0;
     font-family: fantasy;
-    background-color: #D6B0A7;
+    color: var(--primary);
+    background-color: var(--light)
     color: white;
 }
 
@@ -41,6 +50,7 @@ header h1 {
 header a {
     text-decoration: none;
     color: var(--primary-color);
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a:hover {
@@ -158,6 +168,7 @@ nav a {
     color: white;
     background: #ac9deb;
     list-style: none;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .li-skills:hover {
