--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,15 +1,14 @@
-/* Global Styles */
+/* PORTFOLIO CSS STYLES*/
 * {
     box-sizing: border-box;
-    margin: 0;
 }
 
 :root {
-    --primary: rgb(188, 166, 216);
-    --secondary: rgb(189, 194, 232);
-    --tertiary: rgb(172, 157, 235);
-    --dark: rgb(36, 57, 73);
-    --light: rgb(253, 231, 216);
+    --primary: rgb(128, 108, 204);
+    --secondary:rgb(207, 217, 223);
+    --tertiary: rgb(241, 233, 241);
+    --dark: rgb(50, 52, 58);
+    --light: rgb(189, 194, 232);
 }
 
 body {
@@ -18,101 +17,111 @@ body {
     font-family: fantasy;
     color: var(--primary);
     background-color: var(--light);
-    line-height: 1.55vw;
+    line-height: 1.5;
 }
 
-h1 {
+h1, h2, h3 {
     margin: 0;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 p {
     margin: 0;
 }
-/* Global Style End */
 
-/* Header Style */
+/* Header Items */
 header {
-   padding: 15px;
-   display: flex; 
-   flex-direction: row;
-   justify-content: space-between;
-   flex-wrap: wrap;
-   align-items: center;
-   background-color: var(--light);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    background-color: var(--dark);
+    box-shadow: 0 5px 35px rgb(0, 0, 0, 0.5);
 }
 
 header h1 {
+    background-color: var(--light);
+    color: var(--tertiary);
+    padding: 5px 1% 5px 5%;
     margin: 0;
-    padding: 10px 2% 10px 8%;
-    font-size: 45px;
-    color: var(--dark);
-    background-color: var(--secondary);
-}
-
-header a {
-    text-decoration: none;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    font-size: 3vw;
+    line-height: 1;
 }
 
 header a:hover {
-    text-shadow: none;
-    color:var(--tertiary);
+    color: var(--light);
 }
 
-/* Navigation Style */
+/* Navigational Items */
 nav {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
-    
+
 nav a {
-    padding: 10px 15px;
-    font-weight: lighter;
-    font-size: 1.55vw;
+    text-decoration: none;
+    padding: 5px 10px;
     color: var(--secondary);
-} 
+    margin-right: 10px;
+    background-image: linear-gradient(270deg, var(--secondary) 0%, var(--secondary) 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: bottom;
+    transition: all 0.1s ease-in;
+    font-size: 1.5rem;
+}
 
-/* Header/Nav Style End */
+nav a:hover {
+    background-size: 10% 10%;
+    color: var(--primary);
+}
 
-/* Hero Style */
+main {
+    margin-top: 30px;
+    margin-bottom: 40px;
+}
+
+/* Hero Content */
 .hero {
-    background-image: url("../images/magic-bkg.jpg");
+    background: rgb(68, 88, 120);
+    background-image: url("../images/magic-bkg.jpg"), linear-gradient(70deg, var(--secondary) 0%, var(--primary) 100%);
+    background-size: cover;
     background-position: center;
-    background-size: auto;
+    background-blend-mode: soft-light;
     min-height: 30vh;
+    color: var(--light);
+    padding: 2% 6%;
     display: flex;
-    text-align: right;
     justify-content: flex-end;
-    padding-left: 10vw;
     align-items: flex-end;
+    text-align: right;
+    padding-left: 10vw;
 }
 
 .hero img {
     width: 150px;
     margin: 20px;
-    border-radius: 50%;
-    padding-bottom: 35px;
+    border-radius: 30%;
 }
 
 .hero div {
-    flex: 0 0 100%;
+    flex: 0 0 90%;
 }
 
 .hero h2 {
+    color: var(--tertiary);
     margin: 0;
-    padding: 20px;
-    font-size: 2rem;
-    line-height: 1.55vw;
+    padding: 5px 10px;
+    font-size: 2.2rem;
+    line-height: 1.2;
     display: inline;
-    background-color: var(--secondary);
-    color: var(--dark);
 }
 
-/* Content Style */
+/* Main Page Content */
+
 .content-page {
-    max-width: 85%;
+    max-width: 80%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -128,11 +137,11 @@ nav a {
 }
 
 .content h2 {
-    flex: 0 0 10%;
+    flex: 0 0 20%;
     text-align: right;
     padding-right: 15px;
     border-right: 4px solid var(--primary);
-    line-height: 1.1;
+    line-height: 1.55vw;
 }
 
 .content div {
@@ -141,76 +150,112 @@ nav a {
 
 .content p {
     margin-bottom: 20px;
-    color: rgb(27, 30, 63);
-    font-size: large;
+    color: white;
+    font-size: 1vw;
 }
 
-/* Portfolio Style */
-.project-grid:first-child {
+/* Grid Portfolio Structure */
+.grid-container {
+    display: grid;
+    column-gap: 10px;
+    row-gap: 20px;
+    grid-auto-flow: dense;
+    grid-template-columns: repeat(12, 1fr);
+    grid-auto-rows: minmax(150px, 1fr);
+}
+
+.grid-item {
+    border: 2px solid var(--secondary);
+    grid-column: span 4;
+    background-color: var(--primary);
+    color: var(--tertiary);
+    min-height: 100px;
+    display: flex;
+    align-items: flex-end;
+    padding: 0 0 20px 0;
+    text-decoration: none;
+    background-size: 150%;
+    transition: all 0.5s;
+    font-size: 1vw;
+}
+
+/* Grid Portfolio - Feature First Child */
+.grid-item:first-child {
     grid-column: span 8;
     grid-row: span 2;
 }
 
-.project-grid:hover {
+.grid-item:hover {
     background-color: rgba(0, 0, 0, 0.3);
 }
 
-.project-grid div {
+.grid-item div {
     background-color: var(--secondary);
     padding: 8px 10px;
 }
 
-.project-grid h3 {
+.grid-item h3 {
     font-size: 1.4rem;
 }
-/* Portfolio Images */
 
-/* Skills */
+/* Images*/
+
+.horiseon {
+    background-image: url("../images/horiseon.png");
+}
+
+/* Skills Style */
+.skills {
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+.skills h2 {
+    padding-right: 15px;
+    border-right: 4px solid #ac9deb;
+    line-height: 1.55vw;
+  }
+      
 .li-skills {
     display: inline-flex;
-    flex-wrap: wrap;
     margin: 5px;
-    padding: 5px 5px;
+    padding: 5px 10px;
     color: white;
     background: #ac9deb;
     list-style: none;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
+    font-size: 1.2em;
+ }
 
-.li-skills:hover {
-text-shadow: none;
-color:white;
-}
-  /* Skills End */
-/* Portfolio Style End */
+  /* Skills Style End */
 
-
-/* Contact Me Style */
+/* Contact Style */
 form body {
-    font-family: 'Lato', sans-serif;
-    background: #bdc2e8;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
-}
-
-form header {
+  }
+  
+  form header {
     position: relative;
     margin: 100px 0 25px 0;
     font-size: 2.3em;
     text-align: center;
     letter-spacing: 7px;
     flex-wrap: wrap;
-}
-
-.contact {
+  }
+  
+  .contact {
     position: relative;
     width: 500px;
     margin: 50px auto 100px auto;
     justify-content: center;
     flex-wrap: wrap;
+  }
+  
+  .contact h2 {
+  text-align: center;
+  margin-bottom: 20px;
 }
   
-
-input {
+  input {
     font-family: 'Lato', sans-serif;
     font-size: 1em;
     width: 470px;
@@ -223,14 +268,19 @@ input {
     
     border: solid 2px white;
     border-bottom: none;  
-}
   
-input:hover {
+    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+  }
+  
+  input:hover {
     background:#ac9deb;
     color: white;
-}
-
-textarea {
+  }
+  
+  textarea {
     width: 470px;
     max-width: 470px;
     height: 110px;
@@ -241,7 +291,7 @@ textarea {
     outline: none;
     
     color: black;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1em;
     
     border: solid 2px white;
@@ -250,19 +300,19 @@ textarea {
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -ms-transition: all 0.3s ease-in-out;
-}
+  }
   
-textarea:hover {
+  textarea:hover {
     background: #ac9deb;
     color: white;
-}
+  }
   
-#submit {
+  #submit {
     width: 100%px;
     padding: 0;
     margin: -5px 0px 0px 0px;
     
-    font-family: 'Lato', sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1em;
     color: white;
     
@@ -271,96 +321,83 @@ textarea:hover {
     
     border: solid 2px white;
     border-top: none;
-}
+  }
   
-#submit:hover {
+  #submit:hover {
     color:white;
-}
-/* Contact Style End */
-
-/* Footer Style */
-.footer {
-    background-color: var(--light);
+  }
+  /* Contact Style End */
+  
+  /* Footer Style */
+  .footer {
+    background-color: #bdc2e8;
     bottom: 0; 
     width: 100%; 
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
     justify-content: center;
 }
-    
+
 .footer a {
     font-size: 100%;
     color: white;
     padding: 40px;
     text-decoration: none;
-}
-
-.footer a:hover {
-    text-shadow: none;
-    color: #bdc2e8;
-}
-/* Footer Style End */
-
+    }
 
 
 /* MEDIA QUERIES*/
 
 /* Max Width 980px*/
+
 @media screen and (max-width: 980px) {
-header {
-    padding: 0 0 10px 0;
-    justify-content: center;
-    text-align: center;
+    header {
+        padding: 0 0 10px 0;
+        justify-content: center;
+        text-align: center;
     }
 
-header h1 {
-    width: 100%;
-    padding: 5px;
-    margin-bottom: 10px;
-    font-size: 10vw;
+    header h1 {
+        width: 100%;
+        padding: 5px;
+        margin-bottom: 10px;
+        font-size: 10vw;
     }
 
-header nav {
-    justify-content: center;
+    header nav {
+        justify-content: center;
     }
 
-.content> h2,
-.content> div {
-    flex: 0 0 100%;
-}
+    .content > h2,
+    .content > div {
+        flex: 0 0 100%;
+    }
 
-.content> h2 {
-    border-right: none;
-    border-bottom: 4px solid var(--primary);
-    margin-bottom: 20px;
-    padding-bottom: 10px;
-    text-align: left;
-    font-size: 7vw;
-}
+    .content > h2 {
+        border-right: none;
+        border-bottom: 4px solid var(--primary);
+        margin-bottom: 20px;
+        padding-bottom: 10px;
+        text-align: left;
+        font-size: 7vw;
+    }
 
-.hero {
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-    padding-left: 50px;
-}
+    .hero {
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+        padding-left: 50px;
+    }
 }
 
 /* Max Width 768px*/
 @media screen and (max-width: 768px) {
-.project-grid,
-.project-grid:first-child {
-    grid-column: 1 / -1;
+    .grid-item,
+    .grid-item:first-child {
+        grid-column: 1 / -1;
     }
 
-.grid-container {
-    grid-auto-rows: minmax(200px, 1fr);
-    }
-
-.contact address {
-    flex-direction: column;
-    align-items: center;
-    }
+    .grid-container {
+        grid-auto-rows: minmax(200px, 1fr);
+    }    
 }
