--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -6,7 +6,8 @@
 :root {
     --primary: rgb(169, 152, 235);
     --secondary:rgb(93, 97, 139);
-    --dark: rgb(44, 57, 97);
+    --tertiary: rgb(243, 231, 233);
+    --dark: rgb(189, 129, 166);
     --light: rgb(218, 212, 236);
 }
 
@@ -14,7 +15,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: fantasy;
-    background-color: var(--light);
+    background-color: var(--tertiary);
     line-height: 1.55vw;
 }
 
@@ -35,16 +36,17 @@ header {
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
-    padding-top: 40px;
-    background-image: linear-gradient(to top, #dad4ec 0%, #dad4ec 10%, #f3e7e9 100%);
+    padding: 40px;
+    background-image: linear-gradient(to top, #dad4ec 0%, #dad4ec 10%, #bd81a6 100%);
 }
 
 header h1 {
     color: var(--dark);
-    padding: 5px 1% 5px 5%;
+    padding: 10px 5% 10px 5%;
     margin: 0;
     font-size: 3vw;
     line-height: 1.55vw;
+    background-color:var(--secondary);
 }
 
 header a:hover {
@@ -89,7 +91,6 @@ main {
     background-image: linear-gradient(to bottom, #dad4ec 0%, #dad4ec 1%, #f3e7e9 100%);
     background-size: cover;
     background-position: center;
-    background-blend-mode: luminosity;
     min-height: 25vh;
     color: var(--light);
     display: flex;
@@ -102,12 +103,12 @@ main {
 
 .hero img {
     width: 150px;
-    margin: 20px;
+    margin: 0px;
     border-radius: 20%;
 }
 
 .hero div {
-    flex: 0 0 90%;
+    flex: 0 0 80%;
 }
 
 .hero h2 {
@@ -163,10 +164,10 @@ main {
 .container {
     max-width: 300px; 
     margin: 0 auto;  
-    margin-top: 20vh;
+    margin-left: 100px;
     display: inline-grid;
-    column-gap: 10px;
-    row-gap: 10px;
+    column-gap: 25px;
+    row-gap: 25px;
     grid-template-columns: repeat(3, auto);
 }
 
@@ -174,7 +175,7 @@ main {
     width: 100%;
     object-fit: cover;
     border-radius: 12px;
-    height: 214px;
+    height: 220px;
 }
 
 .card-details {
@@ -183,6 +184,11 @@ main {
     padding: 15px;  
     border-radius: 12px;
     text-align: center;
+}
+
+.card-details:first-child {
+    grid-column: span 3;
+    grid-row: span 1;
 }
 
 .tag {
@@ -227,11 +233,12 @@ button:hover {
     flex-wrap: wrap;
     flex-direction: row;
 }
+
 .skills h2 {
     padding-right: 15px;
     border-right: 4px solid #ac9deb;
     line-height: 1.55vw;
-  }
+}
       
 .li-skills {
     display: inline-flex;
@@ -241,7 +248,7 @@ button:hover {
     background: #ac9deb;
     list-style: none;
     font-size: 1.2em;
- }
+}
 
 /* Skills Style End */
 
