--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,224 +1,251 @@
 /* Global Styles*/
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: fantasy;
-    background-color: var(--tertiary);
-    line-height: 1.55vw;
+  margin: 0;
+  padding: 0;
+  font-family: fantasy;
+  background-color: var(--tertiary);
+  line-height: 1.55vw;
 }
 
-h1, h2, h3 {
-    margin: 0;
+h1,
+h2,
+h3 {
+  margin: 0;
 }
 
 p {
-    margin: 0;
+  margin: 0;
 }
 
 :root {
-    --primary: rgb(169, 152, 235);
-    --secondary:rgb(93, 97, 139);
-    --tertiary: rgb(243, 231, 233);
-    --dark: rgb(189, 129, 166);
-    --light: rgb(218, 212, 236);
+  --primary: rgb(169, 152, 235);
+  --secondary: rgb(93, 97, 139);
+  --tertiary: rgb(243, 231, 233);
+  --dark: rgb(189, 129, 166);
+  --light: rgb(218, 212, 236);
 }
 /* Global Styles End */
 
 /* Header/Nav Styles */
 /* Header Items */
 header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-items: center;
-    padding: 40px;
-    background-image: linear-gradient(to top, #dad4ec 0%, #dad4ec 10%, #bd81a6 100%);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 40px;
+  background-image: linear-gradient(
+    to top,
+    #dad4ec 0%,
+    #dad4ec 10%,
+    #bd81a6 100%
+  );
 }
 
 header h1 {
-    color: var(--dark);
-    padding: 10px 5% 10px 5%;
-    margin: 0;
-    font-size: 3vw;
-    line-height: 1.55vw;
-    background-color:var(--secondary);
+  color: var(--dark);
+  padding: 10px 5% 10px 5%;
+  margin: 0;
+  font-size: 3vw;
+  line-height: 1.55vw;
+  background-color: var(--secondary);
 }
 
 header a:hover {
-    color: var(--light);
+  color: var(--light);
 }
 
 /* Navigation Items */
 nav {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 nav a {
-    text-decoration: none;
-    padding: 5px 10px;
-    color: var(--secondary);
-    margin-right: 10px;
-    background-repeat: no-repeat;
-    background-image: linear-gradient(-20deg, #ddd6f3 0%, #faaca8 100%, #faaca8 100%);    
-    background-blend-mode: screen;
-    background-size: 75% 0.1em;
-    background-position: bottom;
-    transition: all 0.1s ease-in-out;
-    font-size: 1.5rem;
+  text-decoration: none;
+  padding: 5px 10px;
+  color: var(--secondary);
+  margin-right: 10px;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(
+    -20deg,
+    #ddd6f3 0%,
+    #faaca8 100%,
+    #faaca8 100%
+  );
+  background-blend-mode: screen;
+  background-size: 75% 0.1em;
+  background-position: bottom;
+  transition: all 0.1s ease-in-out;
+  font-size: 1.5rem;
 }
 
 nav a:hover {
-    background-size: 100% 100%;
-    color: var(--primary);
+  background-size: 100% 100%;
+  color: var(--primary);
 }
 /* Header/Nav Style End */
 
 /* Hero Styles */
 .hero {
-    background-image: linear-gradient(to bottom, #dad4ec 0%, #dad4ec 1%, #f3e7e9 100%);
-    background-size: cover;
-    background-position: center;
-    min-height: 25vh;
-    color: var(--light);
-    display: flex;
-    padding: 1% 1%;
-    justify-content: flex-end;
-    align-items: flex-end;
-    text-align: right;
-    padding-left: 5vw;
+  background-image: linear-gradient(
+    to bottom,
+    #dad4ec 0%,
+    #dad4ec 1%,
+    #f3e7e9 100%
+  );
+  background-size: cover;
+  background-position: center;
+  min-height: 25vh;
+  color: var(--light);
+  display: flex;
+  padding: 1% 1%;
+  justify-content: flex-end;
+  align-items: flex-end;
+  text-align: right;
+  padding-left: 5vw;
 }
 
 .hero img {
-    width: 150px;
-    margin: 0px;
-    border-radius: 20%;
+  width: 150px;
+  margin: 0px;
+  border-radius: 20%;
 }
 
 .hero div {
-    flex: 0 0 80%;
+  flex: 0 0 80%;
 }
 
 .hero h2 {
-    color: var(--secondary);
-    background-image: linear-gradient(-20deg, #ddd6f3 0%, #faaca8 70%, #faaca8 70%);    
-    padding: 5px;    
-    font-size: 2rem;
-    line-height: 1.2;
-    display: inline-flex;
+  color: var(--secondary);
+  background-image: linear-gradient(
+    -20deg,
+    #ddd6f3 0%,
+    #faaca8 70%,
+    #faaca8 70%
+  );
+  padding: 5px;
+  font-size: 2rem;
+  line-height: 1.2;
+  display: inline-flex;
 }
 
 .sideways {
-    writing-mode: vertical-rl;
+  writing-mode: vertical-rl;
 }
 
 /* Main Page Styles */
 
 main {
-    margin-top: 30px;
-    margin-bottom: 40px;
+  margin-top: 30px;
+  margin-bottom: 40px;
 }
 
 .page {
-    margin-left: auto;
-    margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .content {
-    margin: 25px 0;
-    padding: 10px 0;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: stretch;
-    justify-content: space-between;
+  margin: 25px 0;
+  padding: 10px 0;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  justify-content: space-between;
 }
 
 .content h2 {
-    flex: 0 0 20%;
-    text-align: right;
-    padding-right: 10px;
-    border-right: 4px solid var(--dark);
-    color: var(--secondary);
-    line-height: 1.55vw;
-    background-image: linear-gradient(-20deg, #ddd6f3 0%, #faaca8 100%, #faaca8 100%);  
+  flex: 0 0 20%;
+  text-align: right;
+  padding-right: 10px;
+  border-right: 4px solid var(--dark);
+  color: var(--secondary);
+  line-height: 1.55vw;
+  background-image: linear-gradient(
+    -20deg,
+    #ddd6f3 0%,
+    #faaca8 100%,
+    #faaca8 100%
+  );
 }
 
 .content div {
-    flex: 0 0 75%;
+  flex: 0 0 75%;
 }
 
 .content p {
-    margin-bottom: 20px;
-    color: white;
-    font-size: 1.3vw;
+  margin-bottom: 20px;
+  color: white;
+  font-size: 1.3vw;
 }
 
 /*  Projects Style */
 .container {
-    max-width: 300px; 
-    margin: 0 auto;  
-    margin-left: 100px;
-    display: inline-grid;
-    column-gap: 25px;
-    row-gap: 25px;
-    grid-template-columns: repeat(3, auto);
+  max-width: 300px;
+  margin: 0 auto;
+  margin-left: 100px;
+  display: inline-grid;
+  column-gap: 25px;
+  row-gap: 25px;
+  grid-template-columns: repeat(3, auto);
 }
 
 .container img {
-    width: 100%;
-    object-fit: cover;
-    border-radius: 12px;
-    height: 220px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 12px;
+  height: 220px;
 }
 
 .card-details {
-    background-image: linear-gradient(-20deg, #ddd6f3 0%, #faaca8 70%, #faaca8 70%);    
-    border: 1px solid var(--dark); 
-    padding: 15px;  
-    border-radius: 12px;
-    text-align: center;
+  background-color: white;
+  border: 1px solid var(--dark);
+  padding: 15px;
+  border-radius: 12px;
+  text-align: center;
 }
 
 .card-details:first-child {
-    grid-column: span 3;
-    grid-row: span 1;
+  grid-column: span 3;
+  grid-row: span 1;
 }
 
 .tag {
-    padding: 4px 8px;
-    border: 1px solid var(--light);
-    border-radius: 50px;
-    font-size: 1em;
-    font-weight: 600;
-    color: var(--primary);
+  padding: 4px 8px;
+  border: 1px solid var(--light);
+  border-radius: 50px;
+  font-size: 1em;
+  font-weight: 600;
+  color: var(--primary);
 }
-  
+
 .name {
-    font-size: 24px;
-    font-weight: 600;  
-    margin-top: 16px;
-    margin-bottom: 16px;
-    color: var(--dark);
+  font-size: 24px;
+  font-weight: 600;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  color: var(--dark);
 }
-  
-  /* button  element items */
+
+/* button  element items */
 button {
-    border: none;
-    padding: 12px 24px;
-    border-radius: 50px;
-  
-    font-weight: 600;
-    color: var(--light);
-    background-color: var(--secondary); 
-    margin: 0 auto;
-    display: block;  
-    cursor: pointer;
+  border: none;
+  padding: 12px 24px;
+  border-radius: 50px;
+
+  font-weight: 600;
+  color: var(--light);
+  background-color: var(--secondary);
+  margin: 0 auto;
+  display: block;
+  cursor: pointer;
 }
 
 button:focus,
@@ -230,127 +257,127 @@ button:hover {
 
 /* Skills Style */
 .skills {
-    flex-wrap: wrap;
-    flex-direction: row;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
 .skills h2 {
-    padding-right: 15px;
-    border-right: 4px solid #ac9deb;
-    line-height: 1.55vw;
+  padding-right: 15px;
+  border-right: 4px solid #ac9deb;
+  line-height: 1.55vw;
 }
-      
+
 .li-skills {
-    display: inline-flex;
-    margin: 5px;
-    padding: 5px 10px;
-    color: white;
-    background: #ac9deb;
-    list-style: none;
-    font-size: 1.2em;
+  display: inline-flex;
+  margin: 5px;
+  padding: 5px 10px;
+  color: white;
+  background: #ac9deb;
+  list-style: none;
+  font-size: 1.2em;
 }
 /* Skills Style End */
 
 /* Contact Style */
 form body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: white;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: white;
 }
-  
+
 form header {
-    position: relative;
-    margin: 100px 0 25px 0;
-    font-size: 2.3em;
-    text-align: center;
-    letter-spacing: 7px;
-    flex-wrap: wrap;
+  position: relative;
+  margin: 100px 0 25px 0;
+  font-size: 2.3em;
+  text-align: center;
+  letter-spacing: 7px;
+  flex-wrap: wrap;
 }
-  
+
 .contact {
-    position: relative;
-    width: 500px;
-    margin: 50px auto 100px auto;
-    justify-content: center;
-    flex-wrap: wrap;
-    flex: auto;
+  position: relative;
+  width: 500px;
+  margin: 50px auto 100px auto;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex: auto;
 }
-  
+
 .contact h2 {
   text-align: center;
   margin-bottom: 20px;
   color: var(--secondary);
 }
-  
+
 input {
-    font-family: 'Lato', sans-serif;
-    font-size: 1em;
-    width: 470px;
-    height: 50px;
-    padding: 0px 15px 0px 15px;
-    
-    background: transparent;
-    outline: none;
-    color: black;
-    
-    border: solid 2px white;
-    border-bottom: none;  
-  
-    transition: all 0.3s ease-in-out;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
+  font-family: "Lato", sans-serif;
+  font-size: 1em;
+  width: 470px;
+  height: 50px;
+  padding: 0px 15px 0px 15px;
+
+  background: transparent;
+  outline: none;
+  color: black;
+
+  border: solid 2px white;
+  border-bottom: none;
+
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
 }
-  
+
 input:hover {
-    background:#ac9deb;
-    color: white;
+  background: #ac9deb;
+  color: white;
 }
-  
+
 textarea {
-    width: 470px;
-    max-width: 470px;
-    height: 110px;
-    max-height: 110px;
-    padding: 15px;
-    
-    background: transparent;
-    outline: none;
-    
-    color: black;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1em;
-    
-    border: solid 2px white;
-    
-    transition: all 0.3s ease-in-out;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
-  }
-  
+  width: 470px;
+  max-width: 470px;
+  height: 110px;
+  max-height: 110px;
+  padding: 15px;
+
+  background: transparent;
+  outline: none;
+
+  color: black;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1em;
+
+  border: solid 2px white;
+
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+}
+
 textarea:hover {
-    background: #ac9deb;
-    color: white;
+  background: #ac9deb;
+  color: white;
 }
-  
+
 #submit {
-    width: 100%px;
-    padding: 0;
-    margin: -5px 0px 0px 0px;
-    
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1em;
-    color: white;
-    
-    outline:none;
-    cursor: pointer;
-    
-    border: solid 2px white;
-    border-top: none;
+  width: 100%px;
+  padding: 0;
+  margin: -5px 0px 0px 0px;
+
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1em;
+  color: white;
+
+  outline: none;
+  cursor: pointer;
+
+  border: solid 2px white;
+  border-top: none;
 }
-  
+
 #submit:hover {
-    color:white;
+  color: white;
 }
 /* Contact Style End */
 
@@ -358,73 +385,72 @@ textarea:hover {
 
 /* Footer Style */
 .footer {
-    bottom: 0; 
-    width: 100%; 
-    display: flex;
-    justify-content: center;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .footer a {
-    font-size: 100%;
-    color: white;
-    padding: 40px;
-    text-decoration: none;
+  font-size: 100%;
+  color: white;
+  padding: 40px;
+  text-decoration: none;
 }
-
 
 /* Media Queries Style */
 
 /* Max Width 980px*/
 @media screen and (max-width: 980px) {
-    header {
-        padding: 0 0 10px 0;
-        justify-content: center;
-        text-align: center;
-    }
+  header {
+    padding: 0 0 10px 0;
+    justify-content: center;
+    text-align: center;
+  }
 
-    header h1 {
-        width: 100%;
-        padding: 5px;
-        margin-bottom: 10px;
-        font-size: 10vw;
-    }
+  header h1 {
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 10px;
+    font-size: 10vw;
+  }
 
-    header nav {
-        justify-content: center;
-    }
+  header nav {
+    justify-content: center;
+  }
 
-    .content  h2,
-    .content  div {
-        flex: 0 0 100%;
-    }
+  .content h2,
+  .content div {
+    flex: 0 0 100%;
+  }
 
-    .content h2 {
-        border-right: none;
-        border-bottom: 4px solid var(--primary);
-        margin-bottom: 20px;
-        padding-bottom: 10px;
-        text-align: left;
-        font-size: 7vw;
-    }
+  .content h2 {
+    border-right: none;
+    border-bottom: 4px solid var(--primary);
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    text-align: left;
+    font-size: 7vw;
+  }
 
-    .hero {
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        text-align: center;
-        padding-left: 50px;
-    }
+  .hero {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    padding-left: 50px;
+  }
 }
 
 /* Max Width 768px*/
 @media screen and (max-width: 768px) {
-    .card,
-    .card:first-child {
-        grid-column: 1 / -1;
-    }
+  .card,
+  .card:first-child {
+    grid-column: 1 / -1;
+  }
 
-    .container {
-        grid-auto-rows: minmax(200px, 1fr);
-    }    
+  .container {
+    grid-auto-rows: minmax(200px, 1fr);
+  }
 }
 /* Media Queries Style End */
