--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -27,6 +27,7 @@ p {
   --tertiary: rgb(233, 215, 218);
   --dark: rgb(189, 129, 166);
   --light: rgb(191, 177, 235);
+  --white: rgb(255, 255, 255);
 }
 /* Global Styles End */
 
@@ -183,7 +184,7 @@ main {
 
 .content p {
   margin-bottom: 20px;
-  color: white;
+  color: var(--white);
   line-height: 1.5;
 }
 
@@ -212,7 +213,7 @@ main {
 }
 
 .card-details {
-  background-color: white;
+  background-color: var(--white);
   border: 1px solid var(--dark);
   padding: 15px;
   border-radius: 12px;
@@ -282,7 +283,7 @@ button:hover {
   display: inline-flex;
   margin: 5px;
   padding: 5px 10px;
-  color: white;
+  color: var(--white);
   background: #ac9deb;
   list-style: none;
   font-size: 1.2em;
@@ -292,7 +293,7 @@ button:hover {
 /* Contact Style */
 form body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  color: white;
+  color: var(--white);
 }
 
 form header {
@@ -330,7 +331,7 @@ input {
   outline: none;
   color: black;
 
-  border: solid 2px white;
+  border: solid 2px var(--white);
   border-bottom: none;
 
   transition: all 0.3s ease-in-out;
@@ -341,7 +342,7 @@ input {
 
 input:hover {
   background: #ac9deb;
-  color: white;
+  color: var(--white);
 }
 
 textarea {
@@ -358,7 +359,7 @@ textarea {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1em;
 
-  border: solid 2px white;
+  border: solid 2px var(--white);
 
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -368,7 +369,7 @@ textarea {
 
 textarea:hover {
   background: #ac9deb;
-  color: white;
+  color: var(--white);
 }
 
 #submit {
@@ -378,17 +379,17 @@ textarea:hover {
 
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1em;
-  color: white;
+  color: var(--white);
 
   outline: none;
   cursor: pointer;
 
-  border: solid 2px white;
+  border: solid 2px var(--white);
   border-top: none;
 }
 
 #submit:hover {
-  color: white;
+  color: var(--white);
 }
 /* Contact Style End */
 
@@ -404,7 +405,7 @@ textarea:hover {
 
 .footer a {
   font-size: 100%;
-  color: white;
+  color: var(--white);
   padding: 40px;
   text-decoration: none;
 }
