--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -196,17 +196,17 @@ main {
 .container {
   max-width: 500px;
   margin: 0 auto;
-  margin-left: 100px;
   display: inline-grid;
   column-gap: 40px;
   row-gap: 25px;
   grid-template-columns: repeat(3, auto);
   flex-wrap: wrap;
+  
 }
 
 .container img {
   width: 100%;
-  object-fit: contain;
+  object-fit: cover;
   border-radius: 15px;
   height: 220px;
   padding: 15px;
@@ -474,7 +474,8 @@ textarea:hover {
 
   .container {
     width: 600px;
-  }
+    margin-left: 50px;
+ }
 
   .card-details img {
     padding: 25px;
